@@ -34,6 +34,8 @@ git-annex (8.20200909) UNRELEASED; urgency=medium
   * upgrade: Avoid an upgrade failure of a bare repo in unusual circumstances.
   * httpalso: Support being used with special remotes that do not have
     encryption= in their config.
+  * Parse youtube-dl progress output, which lets progress be displayed
+    when doing concurrent downloads.
 
  -- Joey Hess <id@joeyh.name>  Mon, 14 Sep 2020 18:34:37 -0400
 
